terraform_config_files/kubernetes/step1-network.tf
provider "google" {
    region          = "${var.region}"
    project         = "${var.project_name}"
    credentials     = "${file("${var.credentials_file_path}")}"
}

resource "google_compute_network" "kubernetes" {
    name                    = "kubernetes-the-hard-way"
    auto_create_subnetworks = "false"
}

resource "google_compute_subnetwork" "kubernetes" {
    name            = "kubernetes"
    ip_cidr_range   = "10.240.0.0/24"
    network         = "kubernetes-the-hard-way"
    depends_on      = ["google_compute_network.kubernetes"]
}
